    * FIXES https://bugs.torproject.org/19774
    Add a favicon to BridgeDB's web UI.

Changes in version 0.10.1 - 2020-05-27

    * FIXES https://bugs.torproject.org/33945
    This patch fixes a bug that caused the email autoresponder to fail after
    a while.

    * FIXES https://bugs.torproject.org/34154
    Add new fields to the SQLite table BlockedBridges in preparation for taking
    into account OONI's bridge measurement results.

    * FIXES https://bugs.torproject.org/31528
    BridgeDB's UI uses a bunch of obscure "chatspeak" references in its UI.  One
    example is that it responds with "Uh oh, spaghettios!" if there are
    currently no bridges available.  While funny to some, this is difficult to
    translate and shouldn't be part of software that's used by an international
    audience.  This patch removes such references.

    * FIXES https://bugs.torproject.org/12802
    Add a script that sends a bridge request over email, and then checks if it
    received a response from BridgeDB.  We use this script as part of our nagios
    setup, so we notice when our autoresponder breaks.

    * FIXES https://bugs.torproject.org/17548
    This patch removes PGP support.  BridgeDB's signing key expired on
    2015-09-11.  Nobody ever complained and maintaining the bits and pieces
    necessary to sign emails isn't worth the effort, so this patch removes that
    feature.

    * FIXES https://bugs.torproject.org/30941
    Make our email responder more usable.  This patch removes the concept of
    "valid" email commands and returns bridges (obfs4, for now) no matter what
    the user sends.  BridgeDB still supports email commands in case the user
    needs a vanilla or IPv6 bridge.

    * FIXES https://bugs.torproject.org/29686
    Rename files that contain "Bridges" to "bridgerings", to eliminate headache
    on file systems that are case insensitive.

Changes in version 0.10.0 - 2020-04-01

    * FIXES https://bugs.torproject.org/30317